# skills

./: .gitignore  README.md
fastapi-project-builder/: SKILL.md  test-prompts.json
fastapi-project-builder/assets/: AGENTS.md  CLAUDE.md
fastapi-project-builder/assets/templates/: pyproject.toml
fastapi-project-builder/assets/templates/app/: lifespan.py  main.py
fastapi-project-builder/assets/templates/app/api/v1/: health_api.py  router.py
fastapi-project-builder/assets/templates/app/common/: datetime.py
fastapi-project-builder/assets/templates/app/core/: config.py  database.py  exception_handlers.py  exceptions.py  logger.py  middleware.py  response.py
fastapi-project-builder/assets/templates/app/integration/: README.md  __init__.py
fastapi-project-builder/assets/templates/app/model/: base.py
fastapi-project-builder/assets/templates/config/: config-local.yaml  config.yaml
fastapi-project-builder/assets/templates/docs/: README.md
fastapi-project-builder/assets/templates/migrations/: env.py
fastapi-project-builder/assets/templates/optional/hooks/.claude/: settings.json
fastapi-project-builder/assets/templates/optional/hooks/scripts/hooks/: README.md  apifox_sync_guard.py
fastapi-project-builder/assets/templates/optional/mcp/: apifox-mysql.mcp.json  apifox-postgres.mcp.json
fastapi-project-builder/assets/templates/tests/: conftest.py
fastapi-project-builder/assets/templates/tests/integration/: test_health.py
